# Retrieval-Augmented-Generation

./: pyproject.toml  requirements.txt
notebook/: document.ipynb  pdfloader.ipynb
src/: app.py  embeding.py  pyproject.toml  requirements.txt  search.py  vectorstore.py
